Add likes :metal:

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
 <% @posts.each do |post| %>
   <h3><%= link_to post.title, post %></h3>
   <div><%= simple_format post.body %></div>
+  <p id="post_<%= post.id %>_likes"><%= render partial: "likes", locals: {post: post} %></p>
   <hr />
 <% end %>
 
