--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,3 +6,7 @@
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+
+<div id="post_<%= @post.id %>_likes">
+  <%= render partial: "likes", locals: {post: @post} %>
+</div>
